jeff-hax/capabilities/neuvector/manifests/networkpolicies/egress-istiod.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod-egress
  namespace: neuvector
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          # app.kubernetes.io/name: istio-controlplane
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          istio: pilot
    ports:
    - port: 15012
