jeff-hax/capabilities/neuvector/manifests/networkpolicies/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scraping
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-prometheus-exporter-pod
  ingress:
    - ports:
        - protocol: TCP
          port: 8068
      from:
        - podSelector:
            matchLabels:
              app: prometheus
          namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: monitoring
  policyTypes:
    - Ingress
